# Equestrotopia

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
doc/: brdf.txt
src/: CMakeLists.txt  brdf.cpp  brdf.h  dist.cpp  dist.h  first.cpp  first.h  geometry.cpp  geometry.h  input.cpp  input.h  kdtree.cpp  kdtree.h  light.cpp  light.h  main.cpp  main.h  model.cpp  model.h  objer.cpp  objer.h  passes.cpp  photontracing  photontracing.cpp  photontracing.h  place.cpp  ppm.cpp  ppm.h  prerotate.txt  raytracing  raytracing.cpp  raytracing.h  texture.cpp  texture.h  updation.cpp  updation.h
tex/EquReport/: EquReport.tex  report.tex
tex/Equestrotopia/: Equestrotopia.bib  Equestrotopia.tex
