set(CMAKE_CXX_STANDARD 11)
find_package(OpenGL REQUIRED)
find_package(GLUT REQUIRED)
find_package(Threads REQUIRED)
include_directories(${CMAKE_CURRENT_BINARY_DIR})
add_library(Equestrotopia SHARED input.cpp geometry.cpp brdf.cpp kdtree.cpp light.cpp)
ADD_EXECUTABLE(raytracing raytracing.cpp)
target_link_libraries(raytracing Equestrotopia)
ADD_EXECUTABLE(photontracing photontracing.cpp)
target_link_libraries(photontracing Equestrotopia ${GLUT_LIBRARIES} ${OPENGL_gl_LIBRARY})
ADD_EXECUTABLE(updation updation.cpp)
target_link_libraries(updation Equestrotopia ${CMAKE_THREAD_LIBS_INIT})
